# TP_C_HW2

./: .travis.yml  CMakeLists.txt  README.md  main.c
dynamic_lib/: d_ranging.c  d_ranging.h
lib/dynamic_ranking/: CMakeLists.txt
lib/dynamic_ranking/include/: d_ranking.h
lib/dynamic_ranking/src/: d_ranking.c
lib/dynamic_ranking/tests/: CMakeLists.txt
lib/dynamic_ranking/tests/src/: dynamic_ranking_test.cpp
lib/static_ranking/: CMakeLists.txt
lib/static_ranking/include/: ranking.h
lib/static_ranking/src/: ranking.c
lib/static_ranking/tests/: CMakeLists.txt
lib/static_ranking/tests/src/: static_ranking_test.cpp
lib/test_utiles/: CMakeLists.txt
lib/test_utiles/include/: test_utiles.h
lib/test_utiles/src/: test_utiles.c
src/: d_main.c  main.c
static_lib/: ranging.c  ranging.h
